--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -1,25 +1,130 @@
-/**
-  |============================
-  | include css partials with
-  | default @import url()
-  |============================
-*/
-@import url('./reset.css');
-@import url('./vite-promo.css');
-@import url('./header.css');
-
-:root {
-  font-family: Inter, Avenir, Helvetica, Arial, sans-serif;
+* {
+  padding: 0;
+}
+body {
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+}
+.search-form {
+  width: 371px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+input {
+  max-width: 272px;
+  min-width: 260px;
+  height: 40px;
+  padding-left: 6px;
+  padding-right: 6px;
+  border: 1px solid;
+  border-color: #808080;
+  border-radius: 4px;
+  outline: none;
+  font-family: Montserrat;
   font-size: 16px;
-  line-height: 24px;
   font-weight: 400;
+  line-height: 24px;
+  letter-spacing: 0.04em;
+  text-align: left;
+  color: #808080;
+}
+input:hover {
+  border-color: black;
+}
+input:focus {
+  border-color: #4e75ff;
+  color: #2e2f42;
+}
+button {
+  width: 91px;
+  padding: 0;
+  height: 40px;
+  outline: none;
+  border: 0px;
+  border-radius: 8px;
+  background-color: #4e75ff;
+  font-family: Montserrat;
+  font-size: 16px;
+  font-weight: 500;
+  line-height: 24px;
+  letter-spacing: 0.04em;
+  text-align: center;
+  color: #ffffff;
+  cursor: pointer;
+}
+button:hover {
+  background-color: #6c8cff;
+}
 
-  color: #242424;
-  background-color: rgba(255, 255, 255, 0.87);
+.loadBtn {
+  width: 120px;
+  display: none;
+}
+.gallery {
+  display: flex;
+  flex-wrap: wrap;
+  list-style: none;
+  margin: 0;
+}
+.gallery > li {
+  width: 360px;
+  border: 1px solid;
+  border-color: #808080;
+  box-sizing: border-box;
+  margin: 24px;
+}
+.gallery-image {
+  height: 152px;
+  width: 360px;
+}
+.image-details {
+  width: 360px;
+  display: flex;
+  /* flex-wrap: wrap; */
+  text-align: center;
+  justify-content: space-between;
+  font-family: Montserrat;
+  font-size: 12px;
+  font-weight: 400;
+  line-height: 24px;
+  letter-spacing: 0.04em;
+  color: #2e2f42;
+}
+.image-details > b {
+  font-weight: 600;
+  line-height: 16px;
+}
+/* Loader для текстового повідомлення під час завантаження */
+/* .loader {
+    margin-top: 32px;
+    font-family: Montserrat;
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 24px;
+    letter-spacing: 0.04em;
+    text-align: left;
+    color: #2e2f42;
+  } */
 
-  font-synthesis: none;
-  text-rendering: optimizeLegibility;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-  -webkit-text-size-adjust: 100%;
+.loader {
+  margin-top: 32px;
+  width: 48px;
+  height: 48px;
+  border: 5px solid;
+  border-color: #ff3d00 transparent;
+  border-radius: 50%;
+  display: inline-block;
+  box-sizing: border-box;
+  animation: rotation 1s linear infinite;
+}
+
+@keyframes rotation {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
 }
